# ProcessIntelligence

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260619_1300_bf02796cda7e_initial_event_log_schema.py  20260619_1330_baacbc78f6cf_add_auth_workspaces_and_workspace_id_on_.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: analysis.py  auth.py  connectors.py  discovery.py  health.py  logs.py
backend/app/models/: __init__.py  auth.py  event_log.py
backend/app/schemas/: analysis.py  auth.py  connectors.py  discovery.py  event_log.py
backend/app/services/: bottleneck.py  conformance.py  csv_import.py  discovery.py  inductive.py  log_storage.py  performance.py  process_data.py  security.py  variants.py  xes.py
backend/app/services/ai/: __init__.py  conformance_explain.py  data_linking.py  llm.py
backend/app/services/connectors/: __init__.py  base.py  registry.py  rest.py  sql.py
backend/tests/: conftest.py  test_ai.py  test_analysis.py  test_api.py  test_auth.py  test_conformance.py  test_connectors.py  test_csv_import.py  test_discovery.py  test_inductive.py  test_privacy.py  test_xes.py
docs/: connectors.md  privacy.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
samples/: sample_log.csv
(+14 files in other folders)
